:bug: increased memory for Spark unit tests and disable parallelism